--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
         <div id="summary-section" class="summary-section"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.JS"></script>
 </body>
 </html>
