--- a/records.html
+++ b/records.html
@@ -53,6 +53,11 @@
                 </button>
             </div>
             <ul id="income-records" class="editable-records"></ul>
+            <div class="pagination">
+                <button onclick="previousPage()" id="prevBtn">Previous</button>
+                <span id="pageInfo">Page 1</span>
+                <button onclick="nextPage()" id="nextBtn">Next</button>
+            </div>
         </div>
 
         <div id="summary-section" class="summary-section">
