--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <img src="store.png" alt="Store Icon" class="header-icon">
             Income Tracker
         </h1>
+        <div id="current-time" class="time-display"></div>
 
         <!-- Form to add new income -->
         <div class="form-section card-style">
@@ -147,5 +148,6 @@
         </div>
 
     <script src="script.js"></script>
+    <script src="time-display.js"></script>
 </body>
 </html>
