--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         </div>
 
-    <script src="script.js"></script>
+    <script src="script.JS"></script>
     <script src="time-display.js"></script>
 </body>
 </html>
