--- a/records.html
+++ b/records.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.JS"></script>
     <script src="time-display.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
